hw5 fix mutable collection